# realtime_mapping

./: CMakeLists.txt
dependencies/BSpline/: BSpline.sln
dependencies/BSpline/BSpline/: BSpline.vcxproj  BSpline.vcxproj.filters
dependencies/BSpline/BSpline/Debug/: BSpline.lastbuildstate  BSpline_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
dependencies/BSpline/BSpline/Release/: BSpline.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
dependencies/BSpline/Debug/: BSpline.ilk
dependencies/BSpline/src/: SPLINE - Interpolation and Approximation of Data.htm  spline.cpp  spline_prb.cpp
dependencies/TICSync-1.0.2/: pax_global_header
dependencies/TICSync-1.0.2/TICSync-1.0.2/: .gitmodules  CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  INSTALL.md  LICENSE  PROJECT_NAME  README.md
dependencies/TICSync-1.0.2/TICSync-1.0.2/Core/: CMakeLists.txt  TICSyncConfig.h.in
dependencies/TICSync-1.0.2/TICSync-1.0.2/Core/samples/: CMakeLists.txt
dependencies/TICSync-1.0.2/TICSync-1.0.2/Core/samples/TimestampCorrector/: CMakeLists.txt  TimestampCorrector.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/Core/src/: README
dependencies/TICSync-1.0.2/TICSync-1.0.2/Core/testing/: CMakeLists.txt  ConvexEnvelopeTest.cpp  LinearOneWayClockSyncTest.cpp  LinearTwoWayClockSyncTest.cpp  MaxSepFilterTest.cpp  SwitchingOneWayClockSyncTest.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/: CMakeLists.txt
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/include/TICSync/: BasicTimeClient.h  SynchronizationClient.h  TimeServerResponseMsg.h  TimeServices.h  TimestampSerialization.h  TwoWayTimeSim.h  TwoWayTimestamps.h  bufferstream.h  bufferstream_fwd.h  timeserviceExceptions.h  vectorstream.h  vectorstream_fwd.h
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/: CMakeLists.txt
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/basicTimeClient/: CMakeLists.txt
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/basicTimeClient/src/: BasicTimeClientMain.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/pingClient/: CMakeLists.txt
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/pingClient/src/: pingClientMain.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/synchroClient/: CMakeLists.txt
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/synchroClient/src/: SynchroClientMain.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/timeServer/: CMakeLists.txt
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/timeServer/src/: TimeServerMain.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/timestampSim/: CMakeLists.txt
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/samples/timestampSim/src/: timestampSimMain.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/src/: BasicTimeClient.cpp  SynchronizationClient.cpp  TimeServerResponseMsg.cpp  TimestampSerialization.cpp  TwoWayTimeSim.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/TimeServices/testing/: CMakeLists.txt  epochClockMapperTest.cpp
dependencies/TICSync-1.0.2/TICSync-1.0.2/cmake/: FindZMQ.cmake  UseDoxygen.cmake
dependencies/TICSync-1.0.2/TICSync-1.0.2/config/: Doxyfile.in  TICSyncConfig.cmake.in
dependencies/TICSync-1.0.2/TICSync-1.0.2/licenses/: NEW_BSD_LICENSE.txt  README
dependencies/TICSync-1.0.2/TICSync-1.0.2/samples/: CMakeLists.txt  README
dependencies/TICSync-1.0.2/TICSync-1.0.2/samples/Int64TwoWaySync/: CMakeLists.txt  Int64TwoWaySync.cpp
dependencies/fovis/freenect/lib/: freenect-d.exp  freenect-d.lib  freenect.exp  freenect.ilk  freenect.lib  freenect_sync-d.lib  freenect_sync.exp  freenect_sync.ilk  freenect_sync.lib
include/GMM/: CholeskyDecomposition.h  GMM.h  Gaussian.h  MatrixSolve.h
include/SensorSystem/: SystemTransformations.h
src/: realtime_mapping_main.cpp
src/GMM/: CholeskyDecomposition.cpp  Gaussian.cpp
